修复webhook发生重定向时出现的错误